dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.13)
AC_INIT(runtest.exp)
AC_CONFIG_AUX_DIR(..)

dnl These are required by automake
AM_INIT_AUTOMAKE(dejagnu, 20000518)
AM_MAINTAINER_MODE
AC_PROG_MAKE_SET
AC_EXEEXT

AC_PROG_CC
AC_PROG_INSTALL

dnl Level of indirection for automake macro (baseboards:boards_DATA)
BOARDS='$(boards)'
AC_SUBST(BOARDS)
CONFIG='$(config)'
AC_SUBST(CONFIG)

AC_CONFIG_SUBDIRS(example/calc)

AC_OUTPUT(Makefile doc/Makefile example/Makefile testsuite/Makefile)

